Fix login page on small screens
It was bad after moving to flex box model.

--- a/assets/_footer.less
+++ b/assets/_footer.less
@@ -18,6 +18,7 @@ footer {
 @media only screen and (max-width: 1024px) {
   footer {    
     width: 100%;
-    padding: 16px;
+    margin: 0;
+    padding: 10%;
   }
 }
