--- a/assets/foradmin.less
+++ b/assets/foradmin.less
@@ -2010,9 +2010,9 @@ button.down {
 
 @media only screen and (max-width: 1024px) {
 	section#login {
-		margin-left: 10%;
-		margin-right: 10%;
-		width: 80%;
+		margin-left: 0;
+		margin-right: 0;
+		padding: 10%;
   }
 	
 	section#search form>label:first-child,
